<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">StorageTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="stop">Stop</string>
    <string name="data_log_here">Data log here:</string>
    <string name="number">1</string>
    <string name="dot_dot_dot">...</string>
    <string name="flash_path">TestPath:</string>
    <string name="test_time">TestTime(min):</string>
    <string name="cycle">TestCycle:</string>
    <string name="start">Start</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="return_root_folder">Return to root folder</string>
    <string name="return_upper_folder">Return to upper folder</string>
    <string name="basic_test">R/W Basic Test</string>
    <string name="performance_test">R/W Performance Test</string>
    <string name="reliability_test">R/W Reliability Test</string>
    <string name="flash_test">FlashTest</string>
    <string name="sd_test">SDTest</string>
    <string name="ud_test">UDiskTest</string>

</resources>
